istio/goods/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: goods-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 18080
        name: goods-http
        protocol: HTTP
      hosts:
      - "*"
