istio/goods/istio/gateway-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goods-gateway
  namespace: default
spec:
  gateways:
    - goods-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: goods.default.svc.cluster.local
            port:
              number: 9996
