istio/goods/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goods
  namespace: default
spec:
  gateways:
    - goods-gateway
  hosts:
    - "*"
  http:
    - route:            # route all traffic to goods v1
      - destination:
          host: goods.default.svc.cluster.local   # interpreted as 'goods.default.svc.cluster.local'
          subset: v1    # subset is defined in destination rule
